axum-macros/tests/from_request/fail/enum_rejection_derive.rs
use axum_macros::FromRequest;

#[derive(FromRequest, Clone)]
#[from_request(rejection_derive(!Error))]
enum Extractor {}

fn main() {}
