axum-macros/tests/from_request/fail/enum_rejection_derive.stderr
error: cannot use `rejection_derive` on enums
 --> tests/from_request/fail/enum_rejection_derive.rs:4:16
  |
4 | #[from_request(rejection_derive(!Error))]
  |                ^^^^^^^^^^^^^^^^
